# Embedded.STM32.ProjectTemplate

./: .gitignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/CMSIS/: CMakeLists.txt
Core/Configuration/: CMakeLists.txt  main.h
Core/Core/: CMakeLists.txt
Core/Core/Source/: main.c
Core/Drivers/: CMakeLists.txt  README.md
Core/HALDrivers/: CMakeLists.txt
Core/System/Source/: main.c
Src/: main.c
